--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ apply:
     # - terraform apply -auto-approve
     - terraform plan 
     - terraform output -raw servers > terraform/terraform_output.txt
+  stage: apply
 before_script:
   - mkdir -p ~/.ssh
   - cp $id_private_key ~/.ssh/ansible
@@ -32,6 +33,7 @@ config_infrastructure:
     - ansible-playbook main.yml
   variables:
     ANSIBLE_PIPELINING: 'true'
+  stage: config_infrastructure
 destroy:
   cache:
     key: build_cache
