--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ config_infrastructure:
     paths:
       - terraform/terraform_output.txt
   environment: production
+  image: gitlab.com/chaoticteams/ansible
   only:
     - main
   script:
