--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ before_script:
   - mkdir -p ~/.ssh
   - cp $id_private_key ~/.ssh/ansible
   - cp $id_public_key ~/.ssh/ansible.pub
+  - chmod 600 ~/.ssh/ansible
 config_infrastructure:
   cache:
     key: build_cache
