--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,9 @@ before_script:
   - cp $id_public_key ~/.ssh/ansible.pub
   - chmod 600 ~/.ssh/ansible
 config_infrastructure:
+  artifacts:
+    paths:
+      - ansible/inventory
   cache:
     key: build_cache
     paths:
