--- a/ansible/roles/deploy-apps/tasks/01wordpress.yml
+++ b/ansible/roles/deploy-apps/tasks/01wordpress.yml
@@ -3,18 +3,36 @@
     path: /home/{{ansible_user}}/projects/wordpress/
     state: directory
   name: Creates directory
-- ansible.builtin.template:
+- ansible.builtin.copy:
+    content:  |
+      version: '3.1'
+      services:
+        wordpress:
+          user: root
+          image: wordpress
+          restart: always
+          ports:
+            - 8080:80
+          environment:
+            WORDPRESS_DB_HOST: {{wordpress_db_host}}
+            WORDPRESS_DB_USER: {{wordpress_db_user}}
+            WORDPRESS_DB_PASSWORD: {{wordpress_db_password}}
+            WORDPRESS_DB_NAME: {{wordpress_db_name}}
+          volumes:
+            - /data/wordpress:/var/www/html
+          deploy:
+            resources:
+              limits:
+                cpus: '0.5'
+                memory: 512M
     dest: /home/{{ansible_user}}/projects/wordpress/docker-compose.yml
-    src: docker-compose.wordpress.yml.j2
-  become: true
   name: Create docker-compose.yml
   vars:
     wordpress_db_host: "{{ db_host }}"
     wordpress_db_name: "{{ db_name }}"
     wordpress_db_password: "{{ db_password }}"
     wordpress_db_user: "{{ db_username }}"
-- become: true
-  community.docker.docker_compose:
+- community.docker.docker_compose:
     build: 'yes'
     project_name: wordpress
     project_src: /home/{{ansible_user}}/projects/wordpress/
