--- a/ansible/roles/deploy-apps/tasks/02email.yml
+++ b/ansible/roles/deploy-apps/tasks/02email.yml
@@ -3,13 +3,37 @@
     path: /home/{{ansible_user}}/projects/email/
     state: directory
   name: Creates directory
-- ansible.builtin.template:
+- ansible.builtin.copy:
+    content: |
+      version: "3.4"
+      services:
+        poste:
+          image: analogic/poste.io
+          restart: always
+          network_mode: "host"
+          expose:
+            - 25
+            - 80
+            - 110
+            - 143
+            - 465
+            - 587
+            - 993
+            - 995
+            - 4190
+          volumes:
+            - /data/mnt/mail:/data
+          environment:
+            - HTTPS=ON
+            - DISABLE_CLAMAV=TRUE
+          deploy:
+            resources:
+              limits:
+                cpus: '0.5'
+                memory: 512M
     dest: /home/{{ansible_user}}/projects/email/docker-compose.yml
-    src: docker-compose.poste.yml.j2
-  become: true
   name: Create docker-compose.yml
-- become: true
-  community.docker.docker_compose:
+- community.docker.docker_compose:
     build: 'yes'
     project_name: email
     project_src: /home/{{ansible_user}}/projects/email/
