--- a/ansible/roles/deploy-apps/tasks/main.yml
+++ b/ansible/roles/deploy-apps/tasks/main.yml
@@ -3,3 +3,5 @@
   name: run containers in instance
 # - include_tasks: 02email.yml
 #   name: run containers in instance
+- include_tasks: 03prometeus.yml
+  name: run containers for monitoring
