[patch] wordpress db

--- a/ansible/roles/deploy-apps/tasks/01wordpress.yml
+++ b/ansible/roles/deploy-apps/tasks/01wordpress.yml
@@ -29,7 +29,7 @@
   name: Create docker-compose.yml
   vars:
     wordpress_db_host: "{{ db_host }}"
-    wordpress_db_name: "{{ db_name }}"
+    wordpress_db_name: "wordpress"
     wordpress_db_password: "{{ db_password }}"
     wordpress_db_user: "{{ db_username }}"
 - community.docker.docker_compose:
