--- a/ansible/roles/docker/tasks/02docker-compose.yml
+++ b/ansible/roles/docker/tasks/02docker-compose.yml
@@ -1,11 +1,10 @@
 ---
-- name: "Install Docker Compose"
-  pip:
-    name: "docker-compose"
-- ansible.builtin.get_url:
-    dest: "/usr/bin/docker-compose"
-    group: "docker"
-    mode: "u=rwx,g=rx,o=rx"
-    url: "{{file_url}}{{file_path}}"
-  name: "Install docker compose"
-...
+- name: "02docker-compose | Install Docker Compose"
+  ansible.builtin.pip:
+    name: docker-compose
+- name: "02docker-compose | Install docker compose"
+  ansible.builtin.get_url:
+    dest: /usr/bin/docker-compose
+    group: docker
+    mode: u=rwx,g=rx,o=rx
+    url: "{{ file_url }}{{ file_path }}"
