--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 ---
+version: "3.9"
 services:
   ansible:
-    command: ["ansible-playbook","-i", "inventory", "main.yml"]
+    command: [ansible-playbook, -i, inventory, main.yml]
     environment:
       ANSIBLE_INVENTORY: ./inventory
     image: registry.gitlab.com/chaoticteams/ansible
@@ -12,7 +13,7 @@ services:
       - /root/.ansible
     working_dir: /root/
   terraform:
-    command: ["init"]
+    command: [init]
     entrypoint: /root/terraform/entrypoint.sh
     environment:
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
@@ -24,6 +25,5 @@ services:
       - ~/.ssh:/root/.ssh
       - ./terraform:/root/terraform/
     working_dir: /root/terraform/
-version: '3.9'
 volumes:
-  ansible_home: null
+  ansible_home:
